# rust-design-patterns

./: Cargo.toml  changelog.md  readme.md
src/command_pattern/: command_pattern.rs
src/interpreter_pattern/: interpreter_pattern.rs
src/newtype_pattern/: newtype_pattern.rs
src/raiiguard_pattern/: raiiguard_pattern.rs
