[package]
name = "rust-design-patterns"
version = "0.1.1"
edition = "2021"


[lib]  
name = "rust_design_patterns"  # This must match the crate name
path = "src/lib.rs"  # Defines the library entry


[[bin]]
name = "command_pattern"
path = "src/command_pattern/command_pattern.rs"

[[bin]]
name = "interpreter_pattern"
path = "src/interpreter_pattern/interpreter_pattern.rs"

[[bin]]
name = "newtype_pattern"
path = "src/newtype_pattern/newtype_pattern.rs"

[[bin]]
name = "raiiguard_pattern"
path = "src/raiiguard_pattern/raiiguard_pattern.rs"

[dependencies]
